ref: Use java9+ List.of for an unmodifiable list.